Wed Jan 12 16:25:12 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/net/http.rb (Net::HTTP#connect): makes it timeout during 
	  SSL handshake too. [ruby-core:34203]
	  Patch by Marc Slemko.

	* test/net/http/test_http.rb (TestNetHTTP_v1_2#test_timeout_during_HTTP_session):
	  test for [ruby-core:34203]

	* test/net/http/test_https.rb (TestNetHTTPS#test_timeout_during_SSL_handshake):
	  ditto.

Sun Jan  9 16:31:53 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* io.c (Kernel.#syscall): implemented on LP64/LLP64 environments too.
	  also uses __syscall if available for *BSD on 64bit architecture.
	  [ruby-core:34062]

Wed Jan 12 16:24:53 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/readline/extconf.rb: new checks for RL_PROMPT_START_IGNORE 
	  and RL_PROMPT_END_IGNORE. [ruby-core:34331]

	* ext/readline/readline.c: enables USE_INSERT_IGNORE_ESCAPE only if
	  RL_PROMPT_{START,END}_IGNORE are available to get rid of compilation
	  error with libedit.

Sun Jan  9 14:47:50 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c: apply a patch from Nobuyoshi Nakada.
	  fixed #3616 [ruby-core:31484] IRB + readline incorrectly counts
	  non-printing characters in prompt

Fri Jan  7 21:54:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): highlight
	  regexp after open bracket.  [ruby-core:34183]

Thu Jan  6 22:42:02 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigmul1_karatsuba): avoid overflow that make assertion
	  fail in certain case.  this patch is contributed from Ray Chason
	  <chasonr at gmail.com> in personal communication.

Thu Jan  6 11:27:01 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/tree_builder.rb (start_mapping): tags
	  should not be included in JSON mapping

Thu Jan  6 05:14:41 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (get_strio, strio_set_string)